welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:3: error: not found: value avancer
	avancer();
        ^